# mllm-eval-pipeline

./: .gitignore  README.md  pyproject.toml
docs/: README.zh-CN.md  experiments.md
scripts/: analyze_verifier.py  export_verifier_cases.py  jsonl_to_json.py
src/mllm_eval_pipeline/: analysis.py  cli.py  dataset.py  inference.py  io.py  metadata.py  metrics.py  parser.py  paths.py  utils.py  verifier.py
