[project]
name = "mllm-eval-pipeline"
version = "0.1.0"
description = "A multimodal large language model evaluation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "pillow>=12.2.0",
    "transformers>=5.6.2",
    "vllm>=0.19.1",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mllm-eval = "mllm_eval_pipeline.cli:main"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["mllm_eval_pipeline"]

[tool.ty.environment]
python-version = "3.10"
root = ["./src"]
